--- a/.gitmodules
+++ b/.gitmodules
@@ -138,3 +138,7 @@
 	path = agilityrecovery.web
 	url = git@github.com:darwinapps/agilityrecovery.web.wiki.git
 	branch = master
+[submodule "thehub-static.web"]
+	path = thehub-static.web
+	url = git@github.com:darwinapps/thehub-static.web.wiki.git
+	branch = master
