--- a/.gitmodules
+++ b/.gitmodules
@@ -158,3 +158,7 @@
 	path = alertmedia.web
 	url = git@github.com:darwinapps/alertmedia.web.wiki.git
 	branch = master
+[submodule "afr100.web"]
+	path = afr100.web
+	url = git@github.com:darwinapps/afr100.web.wiki.git
+	branch = master
