--- a/.gitmodules
+++ b/.gitmodules
@@ -162,3 +162,7 @@
 	path = afr100.web
 	url = git@github.com:darwinapps/afr100.web.wiki.git
 	branch = master
+[submodule "afr100-static.web"]
+	path = afr100-static.web
+	url = git@github.com:darwinapps/afr100-static.web.wiki.git
+	branch = master
