--- a/.gitmodules
+++ b/.gitmodules
@@ -210,3 +210,7 @@
 	path = hellosayge.web
 	url = git@github.com:darwinapps/hellosayge.web.wiki.git
 	branch = master
+[submodule "squeezee.static"]
+	path = squeezee.static
+	url = git@github.com:darwinapps/squeezee.static.wiki.git
+	branch = master
