--- a/.gitmodules
+++ b/.gitmodules
@@ -218,3 +218,7 @@
 	path = santa-ai
 	url = git@github.com:darwinapps/santa-ai.wiki.git
 	branch = master
+[submodule "cleo-v2.web"]
+	path = cleo-v2.web
+	url = git@github.com:darwinapps/cleo-v2.web.wiki.git
+	branch = master
