--- a/.gitmodules
+++ b/.gitmodules
@@ -222,3 +222,7 @@
 	path = cleo-v2.web
 	url = git@github.com:darwinapps/cleo-v2.web.wiki.git
 	branch = master
+[submodule "usepmc.web"]
+	path = usepmc.web
+	url = git@github.com:darwinapps/usepmc.web.wiki.git
+	branch = master
