--- a/.gitmodules
+++ b/.gitmodules
@@ -238,3 +238,7 @@
 	path = goamplify.web
 	url = git@github.com:darwinapps/goamplify.web.wiki.git
 	branch = master
+[submodule "currencycloud-static.web"]
+	path = currencycloud-static.web
+	url = git@github.com:darwinapps/currencycloud-static.web.wiki.git
+	branch = master
